
  Bugs fixed:
    * Fix notifications not disappearing after clicking an action button.
    * Handle timeout correctly when smaller than fading time (bug #8580).
    * Parse body with g_markup_escape_text which allows us to handle
      span attributes missused by some clients and to parse strings with
      "unusual" caracters such as & (bug #7773, #8187).

Version 0.2.2 (06 August 2011):

    * New cleaner settings dialog with preview on theme change.
    * Only initialize the close timeout when all notifications are closed
      (bug #7467).
    * Fix race with window becoming invalid (bug #7643).
    * Fix typo in invalid markup escaping (bug #7773).
    * Fix PATH_MAX beeing undefined on HURD (bug #7528).
    * Rename dbus service file to avoid conflicts (bug #7335).
    * Allow installation of the helpers in a custom location.
    * Updated translations: Arabic, Basque, Brazilian, Castillan,
      Chinese, Danish, Flemish, Galician, German, Indonesian, Italian,
      Japanese, Romanian, Portuguese, Russian, Slovak, Spanish,
      Swedish and Ukrainian.

Version 0.2.1 (02 Feb 2011):

    * Fix loading of custom icons (bug #6895).
    * Fix crash introduced in 0.2.0 (bug #6929).
    * Fade to transparent when screen is composited, remove the setting.
    * Updated translations: Romanian, Turkish, Polish, Galician, Ukrainian,
      Indonesian, English GB, German, Czech, Norwegian Bokmal and Dutch.

Version 0.2.0 (27 Nov 2010):

  Features:
    * Added man page for xfce4-notifyd-config from Evgeni Golov.
    * Support the 'reason' parameter of the NotificationChanged signal.
      Note that if you are using libnotify 0.4.4 or older, this will
      cause memory leaks in *applications* that use libnotify (not in
      xfce4-notifyd).  In this case, you should compile xfce4-notifyd
      passing the --enable-old-notification-closed-signature switch
      to configure.
    * Add summary-bold style property to allow themes to set the