@@ -17,6 +17,7 @@ Version 0.2.3git:
     * Parse body with g_markup_escape_text which allows us to handle
       span attributes missused by some clients and to parse strings with
       "unusual" caracters such as & (bug #7773, #8187).
+    * Respect border-width when drawing the notification (bug #9475).
 
 Version 0.2.2 (06 August 2011):
 
